# ai-bootcamp-makerspace

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  UV_Cheatsheet.md  dsadada.toml  requirements.txt
01_Prompt Engineering and Prototyping Best Practices/: app_v1.py  app_v2.py  backlog.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  Questions and Answers.md  RAG app architecture.drawio  Session 2 Assignment.ipynb  Untitled Diagram.drawio
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  Questions and Answers.md  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Dockerfile  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  Questions and Answers.md  app.py  pyproject.toml
06_Multi_Agent_with_LangGraph/: Graph flow.drawio  Makefile  Multi_Agent_RAG_LangGraph.ipynb  Questions and Answers.md  pyproject.toml
06_Multi_Agent_with_LangGraph/.files/10d55699-8b2c-4ef2-9c25-70c568c8c7ca/: 46f3d38f-05c8-4f5b-9f09-4de0e3b89f5d.txt
06_Multi_Agent_with_LangGraph/app/: app.py  constructors.py  messages.py  models.py  parsers.py  prompts.py  splitters.py  states.py  tools.py  utils.py
06_Multi_Agent_with_LangGraph/data/4fd7e547/: Mu_Shu_Pork_Recipe.md  Mu_Shu_Pork_Recipe_Outline.md
07_Synthetic_Data_Generation_and_LangSmith/: Questions and Answers.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  bonus_activity.py  custom_graph_idea.drawio  prompts.py  settings.py  splitter.py  synthesizers.py  utils.py
(+54 files in other folders)
