[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "arxiv>=2.1.3",
    "chainlit>=2.1.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "pymupdf>=1.25.2",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.13.2",
    "tiktoken>=0.8.0",
]
